# feedutils

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  atom-exec.c  atom-extract.sh  atom-list.c  atom-merge.sh  atom-timestamp.sh  config.h  feed-addatom.sh  feed-addrss.sh  feed-addweb.sh  feed-daily.sh  feed-delete.sh  feed-markasread.sh  feed-read.sh  feed-unescape.c  feed-unread.sh  feed-update.sh  makefile  notes.md  rss2atom.c  snow2feed.sh
completion/: bash_completion.sh
src/: feed-delete.rs  feed-markasread.rs  feed-read.rs  feed-unread.rs  feed-update.rs  feedutil.rs  main.rs
systemd/: feed.service  feed.timer
